# ReturnSimulationLight

./: README.md  pyproject.toml
cookbooks/: demo_stochastic_volatility.ipynb  market_indices.csv  return_simulation.ipynb
functions/: constraints.py  distributions.py  prices_returns.py  sampling.py
src/: copula.py  dcc.py  models.py  stochastic_volatility.py  utilities.py  variance_models.py
tests/src/: test_models.py
