[tool.poetry]
name = "project-m"
version = "0.1.0"
description = "[]"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "project_m"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.25.2"
pandas = "^2.0.3"
seaborn = "^0.12.2"
pytest = "^7.4.0"
scipy = "^1.11.1"
pytest-cov = "^4.1.0"
arch = "^6.2.0"
openpyxl = "^3.1.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.0"
ruff = "^0.0.283"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
